# pancakes

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.github/workflows/: release.yml
fonts/: icomoon-selection.json
guides/: Installing Packages.md  Jupiter-notebook-guide.md  Mac Guide.md  Using VS Code.md  Windows Guide.md  installing-packages.md  mac-guide.md  mac-installation-guide.md  mac_installation_guide.md  manifest.json  sample.md  using-vs-code.md  usingpancakes.md
include/: main.py  project.ipynb
src/: lib.rs  main.rs  service.rs
src/service/: core.rs  file.rs  gui.rs  logic.rs  process.rs  request.rs
src/service/file/: enums.rs  util.rs
src/service/gui/: enums.rs  external.rs  icons.rs  learn.rs  logging.rs  message.rs  page.rs  structs.rs  styling.rs  sync.rs  update.rs  util.rs  widgets.rs
src/service/gui/page/: dev.rs  guide.rs  home.rs
src/service/gui/update/: dev.rs  guide.rs  install.rs  learn.rs
src/service/gui/widgets/: button.rs  container.rs  markdown.rs  modal.rs  notification.rs  page.rs  scrollable.rs  text.rs
src/service/gui/widgets/modal/: environment.rs  install.rs  pymanager_install.rs  tempCodeRunnerFile.rs
src/service/process/: enums.rs  structs.rs  util.rs
src/service/request/: enums.rs  installer.rs  structs.rs  util.rs
