[package]
name = "pancakes"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = {version = "0.4.44", features = ["serde"]}
directories = "6.0.0"
futures = "0.3.32"
home = "0.5.12"
iced = {version = "0.14.0", features = ["tokio", "debug", "markdown", "image"]}
indexmap = "2.13.0"
open = "5.3.3"
pep440_rs = "0.7.3"
reqwest = "0.13.2"
rfd = "0.17.2"
rust-embed = "8.11.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
strum = {version = "0.28.0", features = ["derive"]}
tokio = {version = "1.49", features = ["full"]}
tokio-util = "0.7.18"
url = {version = "2.5.8", features = ["serde"]}
which = "8.0.2"

# run cargo install cargo-bundle to package icon for mac
[build-dependencies]
winres = "0.1"
ico = "0.5"
image = "0.24"

[package.metadata.bundle]
icon = ["icon.png"]

[target.'cfg(windows)'.build-dependencies]
